* DeviceChain WEB APP  - Ver 0.1.1  - Add block component

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,6 +6,9 @@
 	        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
 	            <a class="nav-link" [routerLink]="['/']"><i class="fa fa-home"></i> Home</a>
 	        </li>
+			<li class="nav-item" routerLinkActive="active">
+				<a class="nav-link" [routerLink]="['/block']"><i class="fa fa-pencil fa-fw"></i> Block</a>
+			</li>
 	        <li class="nav-item" routerLinkActive="active">
 	            <a class="nav-link" [routerLink]="['/about']"><i class="fa fa-info-circle"></i> About</a>
 	        </li>
