Test auth block
TEST

--- a/app/block.component.html
+++ b/app/block.component.html
@@ -3,15 +3,14 @@
     <div class="card-block">
         <table class="table table-bordered table-striped">
             <thead class="thead-default">
-            <tr>
                 <th>Name</th>
                 <th>Age</th>
                 <th>Weight</th>
                 <th>Actions</th>
-            </tr>
             </thead>
         </table>
-        <button class="btn btn-primary" type="submit"><i class="fa fa-floppy-o"></i> TEST</button>
+        <button class="btn btn-primary" type="submit" onclick="getAccessTokenByClientCredential();"><i class="fa fa-floppy-o"></i> TEST</button>
+        <script type="text/javascript" src="../public/javascripts/auth.block.js"></script>
     </div>
 </div>
 
